# Photonedge

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
PhotonEdge/: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-webapp.txt  requirements.txt
PhotonEdge/docs/: adaptive-threshold.md  applications.md  architecture.md  energy-model.md  engineering-envelope.md  experiments.md  ip-landscape.md
PhotonEdge/src/core/: __init__.py  edges.py  fusion.py  metrics.py  optics.py  shapes.py
PhotonEdge/src/experiments/: run_2pass_multiscale.py  run_3pass_multiscale.py  run_energy_model.py  run_envelope_and_adaptive.py
PhotonEdge/src/webapp/: app.py  pipeline.py  tracker.py
PhotonEdge/src/webapp/static/css/: style.css
PhotonEdge/src/webapp/static/js/: app.js
PhotonEdge/src/webapp/templates/: index.html
PhotonEdge/tests/: test_core.py
